--- a/adaptation/css/storymap.2.3.css
+++ b/adaptation/css/storymap.2.3.css
@@ -104,7 +104,7 @@ h1 {
 section {
 
     padding: 5px 15px 10px 15px;
-    margin: 5px;
+    margin: 5px 25px 0px 25px;
     border-radius: 5px;
     background: #eee;
     opacity: 0;
