--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald');
 
 header.masthead {
-    background: url('../img/fieldwork_resized.png') repeat center center;
+    background: url('../img/fieldwork.png') repeat center center;
 }
 
 #iconSection, #partnerSection {
